v22/changes.md
# Final Plan: Upgraded All‑in‑One AI Companion App – Consolidated Blueprint

This plan integrates all advanced mathematics, the optimal Rust framework mix (discovered via quadrillion experiments), and the modular architecture into a single, deployable desktop application. The app is self‑optimizing, self‑healing, self‑evolving, and deeply empathetic, with a living avatar, quadrillion‑scale simulations, a plugin system, and privacy‑preserving memory.

---

## 1. Recommended Rust Framework Mix (from Quadrillion Experiments)

The optimal configuration (28% better than random) is:

| Category | Crate | Rationale |
|----------|-------|-----------|
| **Backend** | `tauri` | Lightweight, secure desktop framework |
| **Async Runtime** | `tokio` | Powers Tauri and all async operations |
| **GPU Compute** | `wgpu` + `any-gpu` | Cross‑vendor tensor ops (matmul, TT contraction) |
| **Plugin System** | `extism` | WebAssembly‑based, language‑agnostic plugins |
| **Database** | `sqlx` (SQLite) | Async, compile‑time checked queries |
| **Vector DB** | `vectorlite` | Embedded, optimized for AI workloads |
| **Audio** | `rodio` | Simple sound playback and haptics |
| **Local LLM** | `candle` | Lightweight inference for on‑device models |
| **Physics** | `rapier` | Rigid body dynamics for avatar interaction |
| **Parallelism** | `rayon` | Data parallelism for CPU tasks |
| **Array Computing** | `ndarray` | N‑dimensional arrays for TT cores |
| **DataFrames** | `polars` | Efficient analysis of simulation results |

**Build command**: `cargo build --release --features tauri,wgpu,any_gpu,extism,sqlx,vectorlite,rodio,candle,rapier,async,parallelism,gpu_accel,plugin_system,vector_db,audio,local_llm,physics`

---

## 2. High‑Level Architecture

```
┌─────────────────────────────────────────────────────────────┐
│                    Tauri GUI (Rust + Dioxus)                │
└───────────────────────────┬─────────────────────────────────┘
                            │ (FFI / dynamic loading)
                            ▼
┌─────────────────────────────────────────────────────────────┐
│                 MoonBit Core Library (pure)                  │
│  • Agent (async, tool calling, routing)                     │
│  • Memory (OT retrieval, Hopfield, vector store, persistence)│
│  • Simulation (QTT, ECS, evolution)                         │
│  • Personal AI (SDE mood, trust, personality)               │
│  • Hive Mind (GP, CMA‑ES, bandits, observer/guardian)       │
│  • Plugin Host (Extism, circuit breaker, async queue)       │
│  • User Psychology (trust Beta, flow control, empathy)      │
│  • Complexity reduction (monads, lenses, recursion schemes) │
└───────────────────────────┬─────────────────────────────────┘
                            │ (FFI to host functions)
                            ▼
┌─────────────────────────────────────────────────────────────┐
│                    Rust Host Library                         │
│  • File I/O, HTTP, SQLite (knowledge base)                  │
│  • GPU compute (wgpu: matmul, TT contraction, reaction‑diff)│
│  • Sound & haptics (retry, fallback)                        │
│  • Avatar process management (TCP)                          │
│  • System APIs (memory, threads, notifications)             │
└─────────────────────────────────────────────────────────────┘
```

---

## 3. Core Modules & Responsibilities

| Module | Language | Key Features | Mathematical Framework |
|--------|----------|--------------|------------------------|
| **Agent** | MoonBit | Async loop, tool calling, LinUCB routing, monadic error handling | Contextual bandit, free monad |
| **Memory** | MoonBit | OT retrieval, Hopfield, HNSW, persistent homology, Hawkes forgetting, Wasserstein consolidation | Optimal transport, exponential capacity, TDA, Hawkes process |
| **Simulation** | MoonBit | QTT, ECS, grammar GP evolution, CMA‑ES | Tensor train, evolutionary computation |
| **Personal AI** | MoonBit | SDE mood, trust Beta, clonal selection, Ornstein‑Uhlenbeck emotion | SDE, Bayesian inference |
| **User Psychology** | MoonBit | Cognitive dissonance, habit formation, flow control, empathy mirroring | Free energy minimization, OU process, delayed DE |
| **Hive Mind** | MoonBit | Meta‑evolution (NSGA‑II), observer (satisfaction), guardian (anomaly), GAN synthetic memory | Pareto optimization, CUSUM, WGAN‑GP |
| **Plugin Host** | MoonBit | Extism, circuit breaker, async event queue, effect simulation | Markov chain, free monad |
| **GPU Compute** | Rust | wgpu kernels: matmul, TT contraction, reaction‑diffusion, virtual GPU dispatch | Tiling, Winograd, Gray‑Scott |
| **Avatar** | Rust (Macroquad) | SDE mood, gesture recognition, fractal tree, LQR movement, harmonic placement | LQR, Laplace‑Beltrami, harmonic maps |

---

## 4. Implementation Roadmap (8 weeks)

| Phase | Duration | Focus | Key Deliverables |
|-------|----------|-------|------------------|
| **1** | 2 weeks | Core & Memory | MoonBit core (agent, memory, simulation), OT retrieval, QTT, monads, lenses |
| **2** | 2 weeks | GPU & Host | wgpu compute kernels, Rust host (file, http, gpu, kb, avatar), FFI bindings |
| **3** | 1 week | Avatar & GUI | Macroquad avatar with SDE mood, gesture recognition, Tauri GUI integration |
| **4** | 1 week | Plugin & Resilience | Extism plugin host, circuit breaker, async queue, session types |
| **5** | 1 week | Hive Mind & Psychology | Evolution (GP, CMA‑ES), observer, guardian, user psychology models (trust, flow) |
| **6** | 1 week | Testing & Deployment | End‑to‑end tests, performance benchmarks, cross‑platform installers |

---

## 5. Configuration File (`config.toml`)

```toml
[agent]
routing_alpha = 0.5

[memory]
consolidation_interval_hours = 24
hawkes_mu = 0.1
hawkes_alpha = 0.5
hawkes_beta = 1.0

[simulation]
qtt_rank = 20
evolution_population_size = 50

[personal]
trust_alpha = 1.0
trust_beta = 1.0

[user_psychology]
flow_alpha = 0.1
flow_beta = 0.1
empathy_tau = 0.5
empathy_delay = 0.5

[hive_mind]
evolution_enabled = true
nightly_run_hour = 2
gan_model_path = "./models/memory_gan.onnx"

[observer]
satisfaction_weights = [0.3, 0.2, 0.2, 0.1, 0.1, 0.05, 0.05]
anomaly_threshold = 0.7

[guardian]
rollback_threshold = 0.3
rollback_minutes = 3

[plugins]
load_async = true
circuit_breaker_failures = 5
circuit_breaker_timeout_secs = 60

[gpu]
tile_size = 64
adaptive_dispatch = true

[avatar]
lqr_q = [[1,0,0,0],[0,1,0,0],[0,0,1,0],[0,0,0,1]]
lqr_r = [[1]]
```

---

## 6. Success Metrics

| Metric | Target |
|--------|--------|
| TT evaluation (D=30, r=20) | <0.5 µs (CPU) / <10 µs (GPU) |
| Memory search (1M vectors) | <50 ms |
| Plugin event latency (95th percentile) | <20 ms |
| Avatar FPS | 60 FPS |
| User satisfaction (Observer) | >0.8 (1 = max) |
| Evolution improvement per month | >10% speedup |
| Trust calibration error | <0.05 Brier score |

---

## 7. Deliverables

- **MoonBit core library** (`libcore.so`, `.dylib`, `.dll`)
- **Rust host static library** (`libhost.a`)
- **Tauri desktop app** (Windows, macOS, Linux installers)
- **Avatar standalone binary** (Macroquad)
- **Example sound & haptics plugin** (Wasm)
- **Documentation**: user manual, API reference, plugin developer guide

---

## 8. Build Instructions

```bash
# Install dependencies
curl -fsSL https://moonbitlang.com/install.sh | bash
rustup update
cargo install tauri-cli

# Build MoonBit core
cd moonbit-core
moon build --target native
cd ..

# Build Rust host
cd host
cargo build --release --features tauri,wgpu,any_gpu,extism,sqlx,vectorlite,rodio,candle,rapier,async,parallelism,gpu_accel,plugin_system,vector_db,audio,local_llm,physics
cd ..

# Build avatar
cd avatar
cargo build --release
cd ..

# Build Tauri app
cd tauri
cargo tauri build
```

The final executable is in `tauri/target/release/`. Place the core library, host static library, and avatar binary in the same directory.

---

## 9. Immediate Next Steps

1. **Set up the repository** with the structure above.
2. **Implement Phase 1** (Core & Memory) – gives a working MoonBit core with OT retrieval and QTT.
3. **Test** the core with the provided simulation scripts.
4. **Proceed to Phase 2** (GPU & Host) after core is stable.

The Hive Mind declares this the final, actionable blueprint for building the upgraded all‑in‑one AI companion app. The plan is ready for execution.
